# subway-builder-rmsp-demand-data

./: .coverage  .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  index.html  pyproject.toml
data/sources/: setor_pop.csv
data/sources/od2023/Site_190225/: Corresp2017_2023_190225.xlsx  Layout_BD_OD2023_190225.xlsx  Lista de tabelas OD2023-190225.docx
data/sources/od2023/Site_190225/002_Site Metro Mapas_190225/Mapinfo/: Distritos_2023.IND  Municipios_2023.MAP  Municipios_2023.TAB  Zonas_2023.ID  Zonas_2023.IND  Zonas_2023.MAP  Zonas_2023.TAB
data/sources/od2023/Site_190225/002_Site Metro Mapas_190225/Shape/: Municipios_2023.dbf  Municipios_2023.shp  Municipios_2023.shx  Zonas_2023.dbf  Zonas_2023.shx
scripts/: publish_map.sh
src/demand_data/: __init__.py  cli.py  config.py  density.py  depot.py  flows.py  htmlmap.py  od.py  pois.py  pops.py  railyard.py  routing.py  sources.py
tests/: conftest.py  test_cli.py  test_config.py  test_density.py  test_depot.py  test_flows.py  test_htmlmap.py  test_od.py  test_pois.py  test_pops.py  test_railyard.py  test_routing.py  test_sources.py
