[project]
name = "subway-builder-rmsp-demand-data"
description = "Gera pops de demanda (Subway Builder / depot) a partir das viagens da Pesquisa OD 2023"
version = "2.0.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer",          # CLI
    "pyarrow",        # leitura do parquet de viagens
    "shapely",        # geometria (contorno e proximidade dos equipamentos)
    "numpy",          # repartição inteira ao fatiar pops
    "folium",         # mapa HTML
    "python-dotenv",  # config via .env
]

[project.scripts]
demand-data = "demand_data.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/demand_data"]

[dependency-groups]
dev = ["ruff", "pytest", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=demand_data --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.report]
exclude_also = ["if __name__ == .__main__.:"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
